samples/_failures_safe/1761144854_e33e1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d48462f1.c: In function ‘main’:
./samples/SAFE/__tmp_d48462f1.c:144:13: error: expected declaration or statement at end of input
  144 |             printf("Matrix 2:\n");
      |             ^~~~~~
./samples/SAFE/__tmp_d48462f1.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d48462f1.c:144:13: error: expected declaration or statement at end of input
